--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "node": ">=10"
   },
   "scripts": {
-    "start": "tsdx watch",
+    "start": "parcel /static/index.html",
+    "start2": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
@@ -50,6 +51,7 @@
     "@size-limit/preset-small-lib": "^4.6.0",
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
+    "bigtest": "^0.2.1",
     "husky": "^4.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
