--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "name": "@frontside/auth0-react",
+  "author": "Frontside Engineering <engineering@frontside.com>",
   "version": "0.1.0",
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "dist/auth0-react.cjs.js",
   "typings": "dist/index.d.ts",
+  "module": "dist/auth0-react.esm.js",
   "files": [
     "dist",
     "src"
@@ -11,51 +14,31 @@
     "node": ">=10"
   },
   "scripts": {
-    "start": "parcel /static/index.html",
+    "start": "PORT=1234 rollup -cw",
     "start2": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
-    "prepare": "tsdx build",
-    "size": "size-limit",
-    "analyze": "size-limit --why"
+    "prepare": "tsdx build"
   },
   "peerDependencies": {
     "react": ">=16"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint"
-    }
-  },
-  "prettier": {
-    "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
-  },
-  "name": "@frontside/auth0-react",
-  "author": "Frontside Engineering <engineering@frontside.com>",
-  "module": "dist/auth0-react.esm.js",
-  "size-limit": [
-    {
-      "path": "dist/auth0-react.cjs.production.min.js",
-      "limit": "10 KB"
-    },
-    {
-      "path": "dist/auth0-react.esm.js",
-      "limit": "10 KB"
-    }
-  ],
   "devDependencies": {
-    "@size-limit/preset-small-lib": "^4.6.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@types/node": "^14.11.2",
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
     "bigtest": "^0.2.1",
-    "husky": "^4.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "size-limit": "^4.6.0",
+    "rollup": "^2.28.2",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-serve": "^1.0.4",
+    "rollup-plugin-typescript2": "^0.27.3",
     "tsdx": "^0.14.0",
     "tslib": "^2.0.1",
     "typescript": "^4.0.3"
