--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "react": ">=16"
   },
   "devDependencies": {
+    "@frontside/eslint-config": "^1.2.0",
+    "@frontside/typescript": "^1.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
+    "@rollup/plugin-replace": "^2.3.3",
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
@@ -43,5 +46,8 @@
     "tsdx": "^0.14.0",
     "tslib": "^2.0.1",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "@auth0/auth0-react": "^1.1.0"
   }
 }
