--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "node": ">=10"
   },
   "scripts": {
-    "start": "rollup -cw",
-    "build": "rollup -c",
+    "start": "parcel static/index.html --open --out-dir build/",
+    "build": "tsdx build",
     "test": "yarn bigtest ci",
-    "test:server": "yarn bigtest server",
+    "test:server": "rm -rf .bigtest && yarn bigtest server",
     "test:run": "yarn bigtest test",
     "lint": "tsdx lint",
     "prepare": "tsdx build"
@@ -28,24 +28,16 @@
   "devDependencies": {
     "@frontside/eslint-config": "^1.2.0",
     "@frontside/typescript": "^1.1.0",
-    "@rollup/plugin-node-resolve": "^7.1.3",
-    "@rollup/plugin-replace": "^2.3.3",
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
     "bigtest": "^0.2.1",
+    "eslint": "^7.10.0",
+    "parcel": "^1.12.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "rollup": "^2.28.2",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-node-globals": "^1.4.0",
-    "rollup-plugin-serve": "^1.0.4",
-    "rollup-plugin-typescript2": "^0.27.3",
     "tsdx": "^0.14.0",
-    "tslib": "^2.0.1",
-    "typescript": "^4.0.3"
+    "tslib": "^2.0.1"
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.1.0"
