Finalize first beta
Update gitignore
Write tests for both unauthenticated and authenticated user scenarios
Add --no-source-maps to mitigate parcel issue
Match and wrap Auth0 context shape in our provider

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "node": ">=10"
   },
   "scripts": {
-    "start": "parcel static/index.html --open --out-dir build/",
+    "start": "parcel static/index.html --open --out-dir build/ --no-source-maps",
     "build": "tsdx build",
     "test": "yarn bigtest ci",
     "test:server": "rm -rf .bigtest && yarn bigtest server",
