--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
-    "bigtest": "^0.2.1",
+    "bigtest": "^0.3.0",
     "eslint": "^7.10.0",
     "parcel": "^1.12.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "tsdx": "^0.14.0",
     "tslib": "^2.0.1"
   },
