--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "5.1.6",
     "bigtest": "^0.3.0",
     "eslint": "^7.10.0",
     "parcel": "^1.12.4",
