--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "start": "parcel static/index.html --open --out-dir build/ --no-source-maps",
     "dev": "tsdx watch",
     "prepare": "tsdx build",
-    "test": "yarn bigtest ci",
-    "test:server": "yarn bigtest server",
-    "test:run": "yarn bigtest test"
+    "ci": "yarn bigtest ci",
+    "test": "yarn bigtest test -l",
+    "test:server": "yarn bigtest server --launch chrome"
   },
   "peerDependencies": {
     "react": ">=16"
@@ -31,6 +31,7 @@
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "5.1.6",
+    "@types/uuid": "^8.3.0",
     "bigtest": "^0.3.0",
     "eslint": "^7.10.0",
     "parcel": "^1.12.4",
@@ -38,7 +39,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "tsdx": "^0.14.0",
-    "tslib": "^2.0.1"
+    "tslib": "^2.0.1",
+    "uuid": "^8.3.1"
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.1.0"
